fix buttons color contrast ratio

--- a/source/layout/footer.css
+++ b/source/layout/footer.css
@@ -17,7 +17,7 @@ button {
   background: transparent;
   border: none;
   border-radius: 8px;
-  color: rgba(0,0,0,0.3);
+  color: rgba(0,0,0,0.5);
   -webkit-transition: all .3s; /* Safari */
   transition: all .3s;
 }
@@ -29,7 +29,7 @@ button i {font-size: 32px !important;}
 
 .active {
   transform: scale(1.2);
-  color: #0095cc;
+  color: #0085b6;
   text-shadow:
        1px 1px 0 #e1e8ed,
      -1px -1px 0 #e1e8ed,
